fixed center align of swiper slide

--- a/src/components/slider_carousel/carousel_card.module.less
+++ b/src/components/slider_carousel/carousel_card.module.less
@@ -1,3 +1,12 @@
+.main_block{
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+}
 .container {
   width: 80%;
   background-color: rgba(227, 110, 0, 1);
